# GenAI_bot_Telegram

./: .env.bak  .gitignore  DELIVERY_SUMMARY.md  DEVELOPMENT.md  Dockerfile  FIXES_APPLIED.md  GET_WORKING_NOW.md  MANIFEST.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_GUIDE.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY.md  SETUP_CHECKLIST.md  TROUBLESHOOTING.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.sh  sitecustomize.py
app/: __init__.py  bot.py
app/llm/: __init__.py  client.py
app/rag/: __init__.py  embedder.py  extractor.py  rag_service.py  vector_store.py  vector_store_fallback.py
app/tests/: __init__.py  test_chunking.py  test_embedding_cache.py  test_faiss_retrieval.py  test_vision_stub.py
app/utils/: __init__.py  config.py  history.py  logging.py
app/vision/: __init__.py  blip_service.py
data/: company_policies.md  product_features.md  technical_documentation.md
